[tool.poetry]
name = "flak"
version = "1.0"
description = "Micro blogging assistant."
authors = ["Blake VandeMerwe <blakev@null.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
markdown2 = "^2.3"
easydict = "^1.9"
jinja2 = "^2.10"
pygments = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
